--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:watch": "jest --watchAll"
   },
   "dependencies": {
+    "@prisma/client": "^5.8.0",
     "axios": "^1.6.5",
     "flowbite-react": "^0.7.2",
     "next": "^14.0.4",
@@ -34,6 +35,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
+    "prisma": "^5.8.0",
     "tailwindcss": "^3.3.0",
     "ts-jest": "^29.1.1"
   }
