--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest",
-    "test:watch": "jest --watchAll"
+    "lint": "next lint"
   },
   "dependencies": {
     "@prisma/client": "^5.8.0",
@@ -23,20 +21,11 @@
     "stripe": "^14.12.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.2.0",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/user-event": "^14.5.2",
     "autoprefixer": "^10.0.1",
-    "cypress": "^13.6.2",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "eslint-plugin-jest-dom": "^5.1.0",
-    "eslint-plugin-testing-library": "^6.2.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "prisma": "^5.8.0",
-    "tailwindcss": "^3.3.0",
-    "ts-jest": "^29.1.1"
+    "tailwindcss": "^3.3.0"
   }
 }
