--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
   "extends": [
-    "next/core-web-vitals",
-    "plugin:testing-library/react",
-    "plugin:jest-dom/recommend"
+    "next/core-web-vitals"
+    // "plugin:testing-library/react",
+    // "plugin:jest-dom/recommend"
   ]
 }
